force-app/main/default/objects/Toll__c/Toll__c.object-meta.xml
<CustomObject>
    <label>Toll</label>
    <nameField>
        <label>Toll Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tolls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>