force-app/main/default/objects/Toll__c/fields/Adjusted_By__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_By__c</fullName>
    <label>Adjusted By</label>
    <length>30</length>
    <type>Text</type>
</CustomField>