force-app/main/default/objects/Toll__c/fields/Bill_Format__c.field-meta.xml
<CustomField>
    <fullName>Bill_Format__c</fullName>
    <label>Bill Format</label>
    <length>25</length>
    <type>Text</type>
</CustomField>