force-app/main/default/objects/Toll__c/fields/Billing_RAO__c.field-meta.xml
<CustomField>
    <fullName>Billing_RAO__c</fullName>
    <label>Billing RAO</label>
    <length>25</length>
    <type>Text</type>
</CustomField>