force-app/main/default/objects/Toll__c/fields/Call_Info_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_Info_Date__c</fullName>
    <label>Call Info Date</label>
    <type>Date</type>
</CustomField>