force-app/main/default/objects/Toll__c/fields/Call_Info_Time__c.field-meta.xml
<CustomField>
    <fullName>Call_Info_Time__c</fullName>
    <label>Call Info Time</label>
    <length>25</length>
    <type>Text</type>
</CustomField>