force-app/main/default/objects/Toll__c/fields/Calling_Plan__c.field-meta.xml
<CustomField>
    <fullName>Calling_Plan__c</fullName>
    <label>Calling Plan</label>
    <length>25</length>
    <type>Text</type>
</CustomField>