force-app/main/default/objects/Toll__c/fields/Conversation_Time__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Time__c</fullName>
    <label>Conversation Time</label>
    <length>25</length>
    <type>Text</type>
</CustomField>