force-app/main/default/objects/Toll__c/fields/CTPOS__c.field-meta.xml
<CustomField>
    <fullName>CTPOS__c</fullName>
    <label>CTPOS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>