force-app/main/default/objects/Toll__c/fields/From_RAO__c.field-meta.xml
<CustomField>
    <fullName>From_RAO__c</fullName>
    <label>From RAO</label>
    <length>25</length>
    <type>Text</type>
</CustomField>