force-app/main/default/objects/Toll__c/fields/From_TN__c.field-meta.xml
<CustomField>
    <fullName>From_TN__c</fullName>
    <label>From TN</label>
    <type>Phone</type>
</CustomField>