force-app/main/default/objects/Toll__c/fields/Indicator_10__c.field-meta.xml
<CustomField>
    <fullName>Indicator_10__c</fullName>
    <label>Indicator #10</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>