force-app/main/default/objects/Toll__c/fields/Indicator_11__c.field-meta.xml
<CustomField>
    <fullName>Indicator_11__c</fullName>
    <label>Indicator #11</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>