force-app/main/default/objects/Toll__c/fields/Indicator_12__c.field-meta.xml
<CustomField>
    <fullName>Indicator_12__c</fullName>
    <label>Indicator #12</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>