force-app/main/default/objects/Toll__c/fields/Inter_Chnge_Cr__c.field-meta.xml
<CustomField>
    <fullName>Inter_Chnge_Cr__c</fullName>
    <label>Inter Change Carrier</label>
    <length>25</length>
    <type>Text</type>
</CustomField>