force-app/main/default/objects/Toll__c/fields/Intrchng_Car_Des__c.field-meta.xml
<CustomField>
    <fullName>Intrchng_Car_Des__c</fullName>
    <label>Interchange Carrier Description</label>
    <length>25</length>
    <type>Text</type>
</CustomField>