force-app/main/default/objects/Toll__c/fields/IOC_Code__c.field-meta.xml
<CustomField>
    <fullName>IOC_Code__c</fullName>
    <label>IOC Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>