force-app/main/default/objects/Toll__c/fields/IXC__c.field-meta.xml
<CustomField>
    <fullName>IXC__c</fullName>
    <label>IXC</label>
    <length>15</length>
    <type>Text</type>
</CustomField>