force-app/main/default/objects/Toll__c/fields/LEG_Number__c.field-meta.xml
<CustomField>
    <fullName>LEG_Number__c</fullName>
    <label>LEG Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>