force-app/main/default/objects/Toll__c/fields/Library_Code__c.field-meta.xml
<CustomField>
    <fullName>Library_Code__c</fullName>
    <label>Library Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>