force-app/main/default/objects/Toll__c/fields/Local_Tax__c.field-meta.xml
<CustomField>
    <fullName>Local_Tax__c</fullName>
    <label>Local Tax</label>
    <length>3</length>
    <type>Text</type>
</CustomField>