force-app/main/default/objects/Toll__c/fields/MIN_SEC_Billed__c.field-meta.xml
<CustomField>
    <fullName>MIN_SEC_Billed__c</fullName>
    <label>MIN/SEC Billed</label>
    <length>25</length>
    <type>Text</type>
</CustomField>