force-app/main/default/objects/Toll__c/fields/Mins__c.field-meta.xml
<CustomField>
    <fullName>Mins__c</fullName>
    <label>Mins</label>
    <length>5</length>
    <type>Text</type>
</CustomField>