force-app/main/default/objects/Toll__c/fields/Msg_Dscriptin__c.field-meta.xml
<CustomField>
    <fullName>Msg_Dscriptin__c</fullName>
    <label>Message Description</label>
    <length>25</length>
    <type>Text</type>
</CustomField>