force-app/main/default/objects/Toll__c/fields/Msg_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Msg_Type_Code__c</fullName>
    <label>Message Type Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>