force-app/main/default/objects/Toll__c/fields/Overflow_Digits__c.field-meta.xml
<CustomField>
    <fullName>Overflow_Digits__c</fullName>
    <label>Overflow Digits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>