force-app/main/default/objects/Toll__c/fields/Place_Called__c.field-meta.xml
<CustomField>
    <fullName>Place_Called__c</fullName>
    <label>Place Called</label>
    <length>30</length>
    <type>Text</type>
</CustomField>