force-app/main/default/objects/Toll__c/fields/Print_ref_No__c.field-meta.xml
<CustomField>
    <fullName>Print_ref_No__c</fullName>
    <label>Print reference Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>