force-app/main/default/objects/Toll__c/fields/Rate_Class__c.field-meta.xml
<CustomField>
    <fullName>Rate_Class__c</fullName>
    <label>Rate Class</label>
    <length>25</length>
    <type>Text</type>
</CustomField>