force-app/main/default/objects/Toll__c/fields/Rate_Class_Des__c.field-meta.xml
<CustomField>
    <fullName>Rate_Class_Des__c</fullName>
    <label>Rate Class Description</label>
    <length>25</length>
    <type>Text</type>
</CustomField>