force-app/main/default/objects/Toll__c/fields/Rate_Period__c.field-meta.xml
<CustomField>
    <fullName>Rate_Period__c</fullName>
    <label>Rate Period</label>
    <length>25</length>
    <type>Text</type>
</CustomField>