force-app/main/default/objects/Toll__c/fields/Rebate_Info__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Info__c</fullName>
    <label>Rebate Info</label>
    <length>225</length>
    <type>Text</type>
</CustomField>