force-app/main/default/objects/Toll__c/fields/Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_ID__c</fullName>
    <label>Record ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>