force-app/main/default/objects/Toll__c/fields/Record_ID_Desc__c.field-meta.xml
<CustomField>
    <fullName>Record_ID_Desc__c</fullName>
    <label>Record ID Description</label>
    <length>25</length>
    <type>Text</type>
</CustomField>