force-app/main/default/objects/Toll__c/fields/Recordng_Methd__c.field-meta.xml
<CustomField>
    <fullName>Recordng_Methd__c</fullName>
    <label>Recording Method</label>
    <length>30</length>
    <type>Text</type>
</CustomField>