force-app/main/default/objects/Toll__c/fields/Reference_No__c.field-meta.xml
<CustomField>
    <fullName>Reference_No__c</fullName>
    <label>Reference Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>