force-app/main/default/objects/Toll__c/fields/Return_Code__c.field-meta.xml
<CustomField>
    <fullName>Return_Code__c</fullName>
    <label>Return Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>