force-app/main/default/objects/Toll__c/fields/Settlement_Code__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Code__c</fullName>
    <label>Settlement Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>