force-app/main/default/objects/Toll__c/fields/Split_Call__c.field-meta.xml
<CustomField>
    <fullName>Split_Call__c</fullName>
    <label>Split Call</label>
    <length>25</length>
    <type>Text</type>
</CustomField>