force-app/main/default/objects/Toll__c/fields/State_Tax__c.field-meta.xml
<CustomField>
    <fullName>State_Tax__c</fullName>
    <label>State Tax</label>
    <length>4</length>
    <type>Text</type>
</CustomField>