force-app/main/default/objects/Toll__c/fields/TO_TN__c.field-meta.xml
<CustomField>
    <fullName>TO_TN__c</fullName>
    <label>TO TN</label>
    <type>Phone</type>
</CustomField>